applications/testing-5371382/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: testing-5371382
  namespace: alpine

spec:
  replicas: 1

  selector:
    matchLabels:
      app: testing-5371382

  template:
    metadata:
      labels:
        app: testing-5371382

    spec:
      containers:
      - name: testing-5371382
        image: alpine:latest

        ports:
        - containerPort: 80
