applications/testing-5371382/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: testing-5371382
  namespace: alpine

spec:
  ingressClassName: traefik

  rules:
  - host: testing-5371382.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: testing-5371382

            port:
              number: 80
